# nlp_project

./: .coverage  .gitignore  README.md  pyproject.toml
configs/: bugs.yaml
data/trajectories/: README.md
data/trajectories/batch-1/Lang-21/: bug_sample.json  events.jsonl  final_patch.diff  meta.json  turns.jsonl  verify_result.json
data/trajectories/batch-1/Lang-33/: bug_sample.json  events.jsonl  final_patch.diff  meta.json  turns.jsonl  verify_result.json
data/trajectories/batch-1/Lang-55/: bug_sample.json  events.jsonl  meta.json  turns.jsonl  verify_result.json
data/trajectories/batch-1/Math-3/: bug_sample.json  events.jsonl  final_patch.diff  meta.json  turns.jsonl  verify_result.json
data/trajectories/batch-1/Math-70/: bug_sample.json  events.jsonl  meta.json  turns.jsonl  verify_result.json
docs/plans/: 2026-04-24-apr-agent-design.md  2026-04-24-apr-agent-m1-foundation.md
scripts/: activate_env.sh  bootstrap_vendor.sh  qwen_smoke.py
src/apr_agent/: __init__.py  api.py  cli.py  env_fingerprint.py  schema.py
src/apr_agent/agent/: loop.py  worker.py
src/apr_agent/defects4j/: checkout.py  info.py  runner.py  test.py  verify.py
src/apr_agent/llm/: client.py  fake.py  qwen.py
src/apr_agent/orchestrator/: controller.py
src/apr_agent/tools/: _paths.py  finish.py  get_current_diff.py  get_failing.py  list_directory.py  read_file.py  registry.py  replace_block.py  run_tests.py  search_code.py
src/apr_agent/trajectory/: recorder.py  writer_jsonl.py
tests/: conftest.py  test_agent_loop.py  test_api_read.py  test_api_summary_steps.py  test_api_transforms.py  test_cli.py  test_contract_downstream.py  test_defects4j_runner.py  test_e2e_fake.py  test_env_fingerprint.py  test_fake_llm.py  test_get_current_diff.py  test_orchestrator.py  test_qwen_client.py  test_recorder.py  test_schema.py  test_tools_defects4j.py  test_tools_fs.py  test_tools_registry.py  test_worker.py  test_writer_jsonl.py
(+137 files in other folders)
